--- a/resources/style.css
+++ b/resources/style.css
@@ -1,6 +1,10 @@
 html {
     font-size: 16px;
+    font-family: Helvetica;
+    line-height: 3rem;
 }
+
+/* header */
 
 header {
     display: inline-flex;
@@ -26,15 +30,86 @@ header {
     padding: 1rem;
 }
 
-body {
-    text-align: left;
+@media only screen and (max-width: 600px) {
+    header {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .navigation li {
+        padding-left: 0;
+    }
+
+    #navigation_list {
+        padding: 0;
+    }
 }
 
-img {
-    width: 30%;
+body {
+    text-align: left;
+    margin-left: 3rem;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+}
+
+/* About me */
+
+.about_me_container {
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.about_me_image {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+}
+
+.about_me_image img {
+    width: 50%;
     aspect-ratio: 1 / 1;
-   float: right;
    margin-right: 3rem;
+   border-radius: 1.5rem;
+}
+.about_me {
+    width: 80%;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .about_me_container {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .about_me_image {
+        justify-content: flex-start;
+    }
+}
+
+/* Projects */
+
+.projects_list a img {
+    width: 40%;
+    aspect-ratio: 16 / 9;
+    margin: 3rem 3rem 3rem 0.5rem;
+    border-radius: 1.5rem;
+}
+
+.projects_list a {
+    color: black;
+}
+
+@media only screen and (max-width: 600px) {
+    .projects_list a img {
+        width: 100%;
+        margin-left: 0rem;
+    }
 }
 
 .fa {
@@ -44,4 +119,14 @@ img {
 .skill_container i {
    font-size: 36px;
    margin: 5px;
+}
+
+footer {
+    text-align: center;
+    margin-top: 3rem;
+}
+
+footer p {
+    margin: 0;
+    line-height: 1.2rem;
 }
