--- a/resources/style.css
+++ b/resources/style.css
@@ -10,6 +10,7 @@ header {
     display: inline-flex;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
 }
 
 .navigation {
@@ -24,6 +25,7 @@ header {
 
 .navigation a {
     text-decoration: none;
+    color: black;
 }
 
 .navigation li {
@@ -73,8 +75,8 @@ main {
 .about_me_image img {
     width: 50%;
     aspect-ratio: 1 / 1;
-   margin-right: 3rem;
-   border-radius: 1.5rem;
+    margin-right: 3rem;
+    border-radius: 1.5rem;
 }
 .about_me {
     width: 80%;
@@ -129,4 +131,15 @@ footer {
 footer p {
     margin: 0;
     line-height: 1.2rem;
+}
+
+/* Contacts */
+
+.contacts {
+    text-align: center;
+}
+
+.contacts i {
+    font-size: 2.25rem;
+    margin: 0.3125rem;
 }
